Sets G1GC to default if no garbage collector defined